--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
         <b><p class="section-title">Intern Name:</b> <span class="info">Vaishnavi Shridhar Mogare</span></p>
         <b><p class="section-title">College: <span class="info"></b>R.L.T. college of scince, Akola</span></p>
         <b> <p class="section-title">Company: <span class="info"></b>Suven Consultants & Technology Pvt. Ltd.</span></p>
-        <b><p class="section-title">Duration: <span class="info"></b>28/11/2024 to 28/12/2024</span></p>
+        <b><p class="section-title">Duration: <span class="info"></b>28/05/2025 to 28/6/2025</span></p>
         <b><p class="section-title">Hours Completed: <span class="info"></b>150 hours</span></p>
 
         <B><p class="section-title">Projects:</p></B>
@@ -26,12 +26,13 @@
             <li>Voter Registration - Replica of National Voter Service Portal Form 6</li>
         </ul>
 
-        <div class="signature-block">
-            <B> <p>Authorized By:</p></B>
-            <p>imran Rocky Jagtiani</p>
-            <p>Founder & CEO</p>
-        </div>
+<div class="signature-block" style="text-align: right;">
+    <b><p>Authorized By:</p></b>
+    <p>imran Rocky Jagtiani</p>
+    <p>Founder & CEO</p>
+</div>
     </div>
 
 </body>
+
 </html>
